[tool.poetry]
name = "task2delta"
version = "0.0.0"
description = ""
authors = ["hanchchch <cndghks15@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
transformers = { git = "https://github.com/huggingface/transformers.git", branch = "main" }
peft = { git = "https://github.com/huggingface/peft.git", branch = "main" }

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
